--- a/front-end/assets/styles/styles.css
+++ b/front-end/assets/styles/styles.css
@@ -40,6 +40,27 @@
     }
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1 0 auto;
+}
+
+footer {
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #555;
+    color: #f0f0f0;
+    padding: 1rem;
+    text-align: center;
+}
+
 .modal.fade-out {
     animation: fade-out 0.5s forwards;
 }
@@ -63,6 +84,16 @@
     width: 20rem;
     text-align: center;
     transition: background-color 0.3s ease;
+}
+
+.container-main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    row-gap: 1rem;
 }
 
 .container-main ul li:hover {
@@ -139,9 +170,9 @@
 }
 
 #searchInput {
-    width: 100%;
+    width: 90%;
     padding: 0.5rem;
-    margin-bottom: 1rem;
+    margin: 0 auto 1rem auto;
     border: 1px solid #f0f0f0;
     border-radius: 0.25rem;
     font-size: 1rem;
