--- a/front-end/assets/styles/header.css
+++ b/front-end/assets/styles/header.css
@@ -28,6 +28,7 @@ body {
     background-color: #555;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     padding: 0 2rem;
 }
