--- a/front-end/assets/styles/admin.css
+++ b/front-end/assets/styles/admin.css
@@ -10,6 +10,9 @@
     margin: 10px;
     text-align: center;
     font-size: 1em;   
+    color: var(--font-color);
+    background-color: var(--admin-bg-color);
+    border-color: var(--admin-border-color);
 }
 
 .course-id {
@@ -17,20 +20,29 @@
 }
 .course-title {
     flex: 1 1 20ch;
+    min-width: 20ch;
 }
 .course-description {
-    flex: 5 1 50ch;
+    flex: 10 1 50ch;
+    height: 100%;
+    min-width: 60ch;
 }
 .course-hours {
     width: 10ch;
 }
 .course-button {
     width: 8ch;
-    color: #77ff77;
+    color: var(--admin-confirm-color);
+}
+.course-button:hover {
+    color: var(--admin-confirm-color-hover);
 }
 .course-delete {
     width: 8ch;
-    color: #ff7777;
+    color: var(--admin-delete-color);
+}
+.course-delete:hover {
+    color: var(--admin-delete-color-hover);
 }
 
 hr {
