--- a/front-end/assets/styles/styles.css
+++ b/front-end/assets/styles/styles.css
@@ -142,9 +142,13 @@ footer {
 
 .close-button {
     color: crimson;
-    font-size: 28px;
-    font-weight: bold;
     cursor: pointer;
+    background-color: #f0f0f0;
+    border: none;
+    padding: 0.5rem 1rem;
+    margin-top: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .subscribe-button {
