--- a/front-end/assets/styles/header.css
+++ b/front-end/assets/styles/header.css
@@ -25,7 +25,7 @@ body {
 .container-header {
     color: #f0f0f0;
     height: 5rem;
-    background-color: #555;
+    background-color: #5f0082;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
