--- a/front-end/assets/styles/styles.css
+++ b/front-end/assets/styles/styles.css
@@ -55,7 +55,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #555;
+    background-color: #5f0082;
     color: #f0f0f0;
     padding: 1rem;
     text-align: center;
@@ -79,7 +79,7 @@ footer {
     list-style: none;
     margin: 1rem;
     padding: 1rem;
-    background-color: #555;
+    background-color: #6f75b720;
     border-radius: 0.5rem;
     width: 20rem;
     text-align: center;
@@ -97,13 +97,13 @@ footer {
 }
 
 .container-main ul li:hover {
-    background-color: #777;
-    box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.1);
+    background-color: #5f008270;
+    box-shadow: 0px 0px 10px 3px rgb(255, 255, 255);
     cursor: pointer;
 }
 
 .modal {
-    color: #29485e;
+    color: #0b3a5b;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -141,7 +141,7 @@ footer {
 }
 
 .close-button {
-    color: crimson;
+    color: rgb(255, 0, 51);
     cursor: pointer;
     background-color: #f0f0f0;
     border: none;
@@ -153,7 +153,7 @@ footer {
 
 .subscribe-button {
     background-color: #f0f0f0;
-    color: #333;
+    color: #000000;
     border: none;
     padding: 0.5rem 1rem;
     margin-top: 1rem;
@@ -162,7 +162,7 @@ footer {
 }
 
 .subscribe-button:hover {
-    background-color: #ddd;
+    background-color: #404e76;
 }
 
 .subscribed-checkmark {
@@ -180,6 +180,6 @@ footer {
     border: 1px solid #f0f0f0;
     border-radius: 0.25rem;
     font-size: 1rem;
-    background-color: #555;
+    background-color: #000000;
     color: #f0f0f0;
 }
